# sift-mcp

./: .env.example  .gitignore  .mcp.json  BACKLOG.md  CLAUDE.md  README.md  STATUS.md  pyproject.toml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml
scripts/: inspect.sh
src/sift_mcp/: __init__.py  db.py  server.py
src/sift_mcp/scripts/: coverage_audit.py
