[project]
name = "sift-mcp"
version = "0.1.0"
description = "MCP server exposing Sift's civic-literacy news + dossier graph to AI clients"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Kristen Martino" }]
dependencies = [
    "mcp[cli]>=1.27.1",
    "asyncpg>=0.30",
    "voyageai>=0.3",
    "anthropic>=0.104.1",
    "python-dotenv>=1.0",
]

[project.scripts]
sift-mcp = "sift_mcp.server:main"

[project.optional-dependencies]
dev = ["ruff>=0.15.14", "pytest>=8.0", "pytest-asyncio>=1.4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sift_mcp"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
